--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "flowbite": "^1.5.3",
     "vue": "^3.2.37"
   },
   "devDependencies": {
     "@types/node": "^18.8.3",
     "@vitejs/plugin-vue": "^3.1.0",
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vue-tsc": "^0.40.4"
