--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "type": "git",
     "url": "https://github.com/cjboy76/vue-ecailr.git"
   },
-  "main": "./dist/my-lib.umd.cjs",
-  "module": "./dist/my-lib.js",
+  "main": "./lib/vue-ecailr.js",
+  "module": "./lib/vue-ecailr.js",
   "exports": {
     ".": {
-      "import": "./dist/my-lib.js",
-      "require": "./dist/my-lib.umd.cjs"
+      "import": "./dist/vue-ecailr.js"
     }
   },
   "scripts": {
