--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   },
   "dependencies": {
     "flowbite": "^1.5.3",
-    "vue": "^3.2.37"
+    "vue": "^3.2.37",
+    "vue-ecailr": "^0.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.8.3",
