--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "files": [
     "lib"
   ],
-  "types": "./lib/VueEcailr.vue.d.ts",
+  "types": "./lib/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/cjboy76/vue-ecailr.git"
