--- a/.github/workflows/site-deploy.yml
+++ b/.github/workflows/site-deploy.yml
@@ -27,6 +27,6 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v1
         with:
           target_branch: gh-pages
-          build_dir: dist
+          build_dir: site/dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
